ARM-742: fixed header white space issue

--- a/apps/host/src/app/components/header/header.scss
+++ b/apps/host/src/app/components/header/header.scss
@@ -276,7 +276,7 @@
 }
 .extendedMenuWrap {
   position: absolute;
-  top: 54px;
+  top: 50px;
   left: 0;
   z-index: 9;
   width: 100%;
@@ -291,6 +291,9 @@
   list-style: none;
   &.open-menu {
     display: flex;
+    @media (max-width: 767px) {
+      display: none;
+    }
   }
   &.extendedLoginMenuWrap {
     padding: 10px 44px 0 0;
